--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
       "react/prop-types": "off",
       "import/prefer-default-export": "off",
       "no-use-before-define": "off",
-      "no-param-reassign": "off"
+      "no-param-reassign": "off",
+      "no-undef": "off"
     }
 }
