--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
     "react-native-vector-icons": "^8.1.0",
+    "react-native-webview": "^11.2.4",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-promise-middleware": "^6.1.2",
@@ -33,6 +34,10 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/jest-native": "^4.0.1",
+    "@testing-library/react-hooks": "^5.1.0",
+    "@testing-library/react-native": "^7.2.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^7.21.0",
@@ -49,6 +54,13 @@
     "react-test-renderer": "16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "setupFiles": [
+      "./node_modules/react-native-gesture-handler/jestSetup.js",
+      "./mock.js"
+    ]
   }
 }
